Fixed Extra Space on home page
git-svn-id: file:///home/svn/repositories/productfromthailand/trunk@74 c5cc9711-2349-4910-810f-657f1504bd7e

--- a/webapp/ecommerce/images/ecommain.css
+++ b/webapp/ecommerce/images/ecommain.css
@@ -328,10 +328,11 @@ margin:0px;
 padding:0px;
 }
 #ecom-header-bar .leftcorner{
-background: url(/pft/images/leftTopCorner.gif) top left;
+background: url(/pft/images/leftTopCorner.gif) top left no-repeat;
 width:2%;
 float:left;
 }
+
 #ecom-header-bar .rightcorner{
 background-color:white;
 width:98%;
